--- a/index.html
+++ b/index.html
@@ -19,3 +19,20 @@
         <label>Female <input type="radio" name="gender_field" value="female"></label>
       </div>
       <div>Age: </div>
+      <select name="age_field">
+        <option>under 18</option>
+        <option>over 18</option>
+      </select>
+    </fieldset>
+    <fieldset>
+      <legend>My Availability</legend>
+      <h3>Days Available:</h3>
+      <div>
+        <div><label>Sunday <input type="checkbox" name="available_field[]" value="sunday"></label></div>
+        <div><label>Monday <input type="checkbox" name="available_field[]" value="monday"></label></div>
+        <div><label>Tuesday <input type="checkbox" name="available_field[]" value="tuesday"></label></div>
+        <div><label>Wednesday <input type="checkbox" name="available_field[]" value="wednesday"></label></div>
+        <div><label>Thursday <input type="checkbox" name="available_field[]" value="thursday"></label></div>
+        <div><label>Friday <input type="checkbox" name="available_field[]" value="friday"></label></div>
+        <div><label>Saturday <input type="checkbox" name="available_field[]" value="saturday"></label></div>
+        <h3>Comments</h3>
