--- a/index.html
+++ b/index.html
@@ -36,3 +36,11 @@
         <div><label>Friday <input type="checkbox" name="available_field[]" value="friday"></label></div>
         <div><label>Saturday <input type="checkbox" name="available_field[]" value="saturday"></label></div>
         <h3>Comments</h3>
+        <textarea name="comments_field"></textarea>
+      </div>
+    </fieldset>
+    <input type="hidden" name="hidden_field" value="Robert Rangel">
+    <input type="submit">
+  </form>
+</body>
+</html>
